# arista_camera_middleman

./: CMakeLists.txt  package.xml
config/: device_config.yaml  gimbal_stabilizer_config.yaml
include/arista_camera_middleman/: AutoFocus.hpp  CamFocuser.hpp  CanDevice.hpp  CanProto.hpp  PayloadCtrl.hpp  RpiCamera.hpp
launch/: middleman.launch.py  xbox_controller.launch.py
setup_scripts/: install_camera_udev_rules.sh  install_harshcam_control_udev_rule.sh
src/: CanDevice.cpp  can_control.cpp  gimbal_stabilizer.cpp  test_autofocus.cpp  test_focus.cpp  test_gst.cpp  test_handshake.cpp  test_rpicamera.cpp  zoom_control.cpp
udev/: 99-arista-camera.rules  99-harshcam-control.rules
